--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,40 +1,48 @@
 .modal-layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(128, 128, 128, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(151, 151, 151, 0.8);
 }
 
 .modal-root {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid rgba(0, 0, 0, .2);
-  background-color: white;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    color: white;
+    background-color: rgba(235, 216, 92, 0.8);
 }
 
 .modal-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 300px;
-  padding: 1rem;
-  border-bottom: 1px solid #e9ecef;
-  font-weight: 700;
-  font-size: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 300px;
+    padding: 1rem;
+    border-bottom: 1px solid #e9ecef;
+    font-weight: 700;
+    font-size: 22px;
+}
+
+.modal-winner {
+    display: flex;
+    justify-content: center;
+    height: 400px;
 }
 
 .modal-body {
-  padding: 1rem;
+    padding: 1rem;
 }
 
 .close-btn {
-  font-size: 1.5rem;
-  font-weight: 700;
-  line-height: 1;
-  cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1;
+    cursor: pointer;
 }
